# 10x-trajectory_control_ws

./: README.md  trajectory_generator_plot_sample_data.txt
config/: params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: controller.launch.py  simulation.launch.py
src/trajectory_controller/: package.xml  setup.py
src/trajectory_controller/scripts/: path_smoother_node  trajectory_generator_node  trajectory_tracker_node  visualizer_node
src/trajectory_controller/test/: test_path_smoother.py  test_trajectory_generator.py  test_trajectory_tracker.py
src/trajectory_controller/trajectory_controller/: path_smoother.py  trajectory_generator.py  trajectory_tracker.py
